--- a/index.html
+++ b/index.html
@@ -12,28 +12,18 @@
     <script src="https://unpkg.com/vue@3"></script>
   </head>
   <body>
-    <div id="app" @details-showing="swapDisplay">
-      <header>
-        <div id="head1">
-          <img src="./assets/media/pokeball.png" alt="pokéball" class="logo">
-        </div>
-        <div id="head2">
-          <img src="./assets/media/pokedex.svg" alt="pokédex" class="titleLog">
-        </div>
-      </header>
+    <div id="app">
+      <c-header></c-header>
       <div class="searchDiv">
-        <h2 id="searchTitle">Nom ou ID du Pokémon : </h2>
+        <h2 id="searchTitle">Name or ID of the Pokémon : </h2>
         <div id="searchBar">
-          <input type="text" id="searchField" placeholder="Recherchez un Pokémon...">
+          <input type="text" id="searchField" placeholder="Search for a Pokémon...">
           <img src="./assets/media/search.png" id="searchLogo" class="button" alt="searchLogo">
         </div>
       </div>
-      <list-pokemon v-if="!showDetails" :list="pokemons"></list-pokemon>
-      <pokemon-detail v-if="showDetails" @show-details="showPokemon"></pokemon-detail>
-      <footer>
-      <p>©2022 意志 - Ishi.</p>
-      <p>IG3 - 2021/2022</p>
-      </footer>
+      <list-pokemon v-if="!showDetails" :list="pokemons" @send-details="sendDetails"></list-pokemon>
+      <pokemon-detail v-if="showDetails" :details="details[0]" @close-details="showList"></pokemon-detail>
+      <c-footer></c-footer>
     </div>
 
     <!-- Import Pokedex -->
@@ -48,10 +38,12 @@
     <script src="./components/Detail.js"></script>
     <script src="./components/PokemonList.js"></script>
     <script src="./components/Pokemon.js"></script>
+    <script src="./components/Header.js"></script>
+    <script src="./components/Footer.js"></script>
 
     <!-- Mount App -->
     <script>
-      const interval = {offset : 0, limit : 10}
+      const interval = {offset : 0, limit : 100}
       const mountedApp = app.mount('#app')
       P.getPokemonsList(interval).then(function(response){ //récupération des infos pokémons
           return response.results.slice()
